tests/baselines/reference/declarationEmitDefaultExport2.errors.txt
tests/cases/compiler/declarationEmitDefaultExport2.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/compiler/declarationEmitDefaultExport2.ts (1 errors) ====
    export default class {
    ~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    }